--- a/README.asciidoc
+++ b/README.asciidoc
@@ -17,7 +17,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.gradle.api.plugins:gradle-vagrant-plugin:0.1'
+        classpath 'org.gradle.api.plugins:gradle-vagrant-plugin:0.2'
     }
 }
 
@@ -32,13 +32,13 @@ The plugin defines the following tasks:
 |=======
 |Task name           |Depends on |Type          |Description
 |`vagrantDestroy`    |-          |Vagrant       |Stops the running machine Vagrant is managing and destroys all resources.
-|`vagrantHalt`       |-          |Vagrant       |Runs remote SSH command in Vagrant box.
-|`vagrantReload`     |-          |Vagrant       |Shuts down the running machine Vagrant is managing.
-|`vagrantResume`     |-          |Vagrant       |The equivalent of running a halt followed by an up.
+|`vagrantHalt`       |-          |Vagrant       |Shuts down the running machine Vagrant is managing.
+|`vagrantReload`     |-          |Vagrant       |The equivalent of running a halt followed by an up.
+|`vagrantResume`     |-          |Vagrant       |Resumes the guest machine Vagrant is managing.
 |`vagrantSshConfig`  |-          |Vagrant       |Outputs the valid configuration for an SSH config file to SSH.
 |`vagrantStatus`     |-          |Vagrant       |Outputs the state of the machines Vagrant is managing.
 |`vagrantSuspend`    |-          |Vagrant       |Suspends the guest machine Vagrant is managing.
-|`vagrantUp`         |-          |Vagrant       |Creates and configures guest machines according to your Vagrantfile.
+|`vagrantUp`         |-          |VagrantUp     |Creates and configures guest machines according to your Vagrantfile.
 |=======
 
 
@@ -50,6 +50,7 @@ The plugin defines the following extension properties in the `vagrant` closure:
 |=======
 |Property name |Type                                            |Default value                                     |Description
 |`boxDir`      |File                                            |-                                                 |The directory the targeted Vagrant box resides in.
+|`provider`    |String                                          |virtualbox                                        |The link:http://docs.vagrantup.com/v2/providers/index.html[backend provider] to be used.
 |=======
 
 
@@ -61,7 +62,13 @@ vagrant {
     boxDir = file('~/dev/my-vagrant-box')
 }
 
-import org.gradle.api.plugins.vagrant.VagrantSsh
+import org.gradle.api.plugins.vagrant.tasks.Vagrant
+import org.gradle.api.plugins.vagrant.tasks.VagrantSsh
+
+task vagrantListsBoxes(type: Vagrant) {
+    description = 'Outputs a list of available Vagrant boxes.'
+    commands = ['box', 'list']
+}
 
 task vagrantEcho(type: VagrantSsh) {
     description = 'Runs remote SSH command in Vagrant box.'
