--- a/README.asciidoc
+++ b/README.asciidoc
@@ -60,11 +60,20 @@ The base plugin defines the following extension properties in the `vagrant` clos
 
 [options="header"]
 |=======
-|Property name |Type     |Default value          |Description
-|`boxDir`      |File     |`project.projectDir`   |The directory the targeted Vagrant box resides in.
-|`provider`    |String   |virtualbox             |The link:http://docs.vagrantup.com/v2/providers/index.html[backend provider] to be used.
+|Property name   |Type      |Default value          |Description
+|`boxDir`        |File      |`project.projectDir`   |The directory the targeted Vagrant box resides in.
+|`provider`      |String    |virtualbox             |The link:http://docs.vagrantup.com/v2/providers/index.html[backend provider] to be used.
 |=======
 
+The recommended way for providing values to the `Vagrantfile` from the outside is to use environment variables. This is made
+possible through the nested configuration element `environmentVariables`. This element exposes the method `variable` that
+takes two parameters: the key and value for a environment variable. For each invocation of this method a new key/value pair
+is added to internal property named `variables`.
+
+[options="header"]
+|=======
+|Property name   |Type                      |Default value          |Description
+|`variables`     |Map<String, String>       |[:]                    |Provided environment variables as key/value pairs.
 
 === Example
 
@@ -143,6 +152,11 @@ The plugin defines the following tasks:
 ----
 vagrant {
     boxDir = file('~/dev/my-vagrant-box')
+
+    environmentVariables {
+        variable 'IP', '192.168.1.33'
+        variable 'OPERATINGSYSTEM', 'redhat'
+    }
 }
 
 import org.gradle.api.plugins.vagrant.tasks.Vagrant
